erd diagram of index.html.erb

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -12,3 +12,6 @@
   <li>Second stage, they want the system can have features that users can search books, select desired books, view prices, and then order them. In addition, it can store information of customers: address, email, order history.</li>
 </ul>
 <p>For intro project, I will address to all features in the first stage</p>
+<h3>ERD Diagram</h3>
+<br>
+<img src="https://raw.githubusercontent.com/khuongngoc1518/book_store/About_page/db/book_store_intro_project.png?token=GHSAT0AAAAAABX3NSGWK2Y4XDKK4TQ5LHEUY72JIWQ">
