update home_controller and its routes

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -14,4 +14,4 @@
 <p>For intro project, I will address to all features in the first stage</p>
 <h3>ERD Diagram</h3>
 <br>
-<img src="https://raw.githubusercontent.com/khuongngoc1518/book_store/About_page/db/book_store_intro_project.png?token=GHSAT0AAAAAABX3NSGWK2Y4XDKK4TQ5LHEUY72JIWQ">
+<img src="../../book_store_intro_project.png">
