--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,12 +1,12 @@
-<p><%= @book.id %></p>
-<p><%= @book.title %></p>
-<p><%= @book.description %></p>
-<p><%= @book.isbn13 %></p>
-<p><%= @book.num_pages %></p>
-<p><%= @book.publication_date %></p>
-<p><%= @book.price %></p>
-<p><%= @book.image_url %></p>
-<p><%= @book.language_id %></p>
-<p><%= @book.publisher_id %></p>
-<p><%= @book.genre_id %></p>
+<p><strong>Book ID: </strong><%= @book.id %></p>
+<p><strong>Title: </strong><%= @book.title %></p>
+<p><strong>Description: </strong><%= @book.description %></p>
+<p><strong>ISBN13: </strong><%= @book.isbn13 %></p>
+<p><strong>Number of Pages: </strong><%= @book.num_pages %></p>
+<p><strong>Publication Date: </strong><%= @book.publication_date %></p>
+<p><strong>Pirce: </strong><%= @book.price %></p>
+<p><strong>Image URL: </strong><%= @book.image_url %></p>
+<p><strong>Language: </strong><%= @language.name %></p>
+<p><strong>Publisher: </strong><%= @publisher.name %></p>
+<p><strong>Genre: </strong><%= @genre.name %></p>
 
