--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -1,2 +1,8 @@
 <h1>Authors#show</h1>
 <p>Find me in app/views/authors/show.html.erb</p>
+<h2>List of books from <%= @author.name %>: </h2>
+<% @books.each do |book| %>
+  <ul>
+    <li><%= link_to book.title, book %></li>
+  </ul>
+<% end %>
