--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,27 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma-rtl.min.css">
   </head>
 
   <body>
+  <div>
     <%= render partial: 'layouts/navbar' %>
+  </div>
+    <section>
+      <div class="container">
+        <h2 class="title is-2">List of Books: </h2>
+      </div>
+      <%= form_with(url: search_books_path, method: :get) do%>
+        <div class="field is-grouped mb-5">
+          <%= text_field_tag(:keywords, nil, class: "input", placeholder: "Search for Books") %>
+        </div>
+
+        <div class="control">
+          <%= submit_tag("search", class: "button is-primary") %>
+        </div>
+      <% end %>
     <%= yield %>
+    <section>
   </body>
 </html>
