--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -18,7 +18,8 @@
 
   <div>
     <%= form.label :content, style: "display: block" %>
-    <%= form.text_area :content %>
+    <%= form.text_area :content, :class => "tinymce" %>
+    <%= tinymce %>
   </div>
 
   <div>
