--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,7 +3,8 @@
     <nav>
       <ul>
         <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "About", about_path %></li>
+        <li><%= link_to "About", "/pages/8" %></li>
+
       </ul>
     </nav>
 </header>
