--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @page.title %></h1>
-<p><%= @page.content %></p>
+<p><%= raw(@page.content) %></p>
 
 <ul>
   <li><%= link_to "Edit", edit_page_path(@page) %></li>
