--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,10 +1,31 @@
 <header>
-  <div class="container" ></div>
-    <nav>
-      <ul>
-        <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "About", "/pages/8" %></li>
+  <div class="jumbotron">
+    <div class="container text-center">
+    <h1>Online Bookstore</h1>
+    </div>
+  </div>
+<div class="collapse navbar-collapse" id="navbar">
+			<ul class="nav navbar-nav">
+				<li><%= link_to "Home", root_path %></li>
+				<li><%= link_to "About", "/pages/8" %></li>
+			</ul>
+      <div>
+        <%= form_with(url: search_books_path, method: :get, local:true) do |form| %>
+          <div class="field">
+          <%= form.label :keywords, "Search for:" %>
+            <%= text_field_tag(:keywords, nil, class: "input", placeholder: "Search for Books by title or ISBN13") %>
+            <%= form.select :genre_id, options_for_select(Genre.all.map{|c| [c.name, c.id]}), { prompt: "Select Genre" } %>
+            <%= form.submit "Search", class: "control button is-primary" %>
+          </div>
+        <% end %>
 
-      </ul>
-    </nav>
+      <div>
+
+			<%# <input type="text" placeholder="search..." style="margin-top:8px; color:black">
+			<button type="button" value="search" style="color:black;">Search</button> %>
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href=""><span class="glyphicon glyphicon-user"></span>Profile</a></li>
+				<li><a href=""><span class="glyphicon glyphicon-shopping-cart"></span>Cart</a></li>
+			</ul>
+		</div>
 </header>
