update front-end interface

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,4 @@
-<h2>
-  <span>New Releases Books</span>
-</h2>
+<center><h2><strong><p style="margin: 0 0 20px">New Releases Books</p></strong></h2></center>
 
 <% @books.in_groups_of(4) do |book1, book2, book3, book4| %>
   <div class="container">
