--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,7 @@
-<hr>
 <footer>
-  <p>
-    <em>Copywrong IMDB  2021</em>
-  </p>
+  <center>
+			<p>Copyright of Book Store 2023</p>
+	</center>
   <ul>
     <li><%= link_to "Home", root_path %></li>
     <li><%= link_to "List of books", books_path %></li>
