--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
     <section>
     <%= yield %>
     </section>
-      <%if controller_name == 'books' %>
+      <%if controller_name != 'books' %>
         <p>No footer in the books page </p>
       <% else %>
         <%= render partial: 'layouts/footer' %>
