--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer>
-  <center><p>Copyright of Book Store 2023</p></center>
-  <ul>
+  <p>Copyright of Book Store 2023</p>
+  <ul></ul>
     <li><%= link_to "Home", root_path %></li>
     <li><%= link_to "List of books", books_path %></li>
     <li><%= link_to "List of publishers", publishers_path %></li>
