FE_homepage_books_items

--- a/app/views/books/search.html.erb
+++ b/app/views/books/search.html.erb
@@ -1,6 +1,6 @@
-<p class="mb-5">
-  Book found when searching for: <%= params[:keywords] %>
-</p>
+<h3>
+  Search results for keyword: <i class="text-secondary">"<%= params[:keywords] %>"</i>
+</h3>
 
 <ul>
   <% @books.each do |book|%>
