--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,18 @@
     <%= javascript_importmap_tags %>
     <%= tinymce_assets %>
     <script type="text/javascript" src="/assets/tinymce/tinymce.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
 
-  <body>
+  <body></body>
     <div>
       <%= render partial: 'layouts/navbar' %>
+      <div class="banner">
+        <div class="container">
+          <h1>Welcome to Bookstore</h1>
+        </div>
+      </div>
     </div>
     <section>
     <%= yield %>
