--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<header class="p-3 mb-3 border-bottom bg-body-secondary">
+<header class="border-bottom bg-body-secondary">
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
@@ -35,34 +35,3 @@
       </div>
     </div>
   </header>
-
-<header>
-  <div class="jumbotron">
-    <div class="container text-center">
-    <h1>Online Bookstore</h1>
-    </div>
-  </div>
-<div class="collapse navbar-collapse" id="navbar">
-			<ul class="nav navbar-nav">
-
-			</ul>
-      <div>
-        <%= form_with(url: search_books_path, method: :get, local:true) do |form| %>
-          <div class="field">
-          <%= form.label :keywords, "Search for:" %>
-            <%= text_field_tag(:keywords, nil, class: "input", placeholder: "Search for Books by title or ISBN13") %>
-            <%= form.select :genre_id, options_for_select(Genre.all.map{|c| [c.name, c.id]}), { prompt: "Select Genre" } %>
-            <%= form.submit "Search", class: "control button is-primary" %>
-          </div>
-        <% end %>
-
-      <div>
-
-			<%# <input type="text" placeholder="search..." style="margin-top:8px; color:black">
-			<button type="button" value="search" style="color:black;">Search</button> %>
-			<ul class="nav navbar-nav navbar-right">
-				<li><a href=""><span class="glyphicon glyphicon-user"></span>Profile</a></li>
-				<li><a href=""><span class="glyphicon glyphicon-shopping-cart"></span>Cart</a></li>
-			</ul>
-		</div>
-</header>
