--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -11,11 +11,16 @@
           <li><%= link_to "Home", root_path, :class => "nav-link px-2 link-secondary" %></li>
 				  <li><%= link_to "About", "/pages/8", :class =>"nav-link px-2 link-dark" %></li>
         </ul>
-        <%= form_with(url: search_books_path, method: :get, local:true, html: {class: "col-8 col-lg-8 mb-3 mb-lg-0 me-lg-3 d-flex"}) do |form| %>
+        <% if controller_name != 'pages' %>
+          <%= form_with(url: search_books_path, method: :get, local:true, html: {class: "col-8 col-lg-8 mb-3 mb-lg-0 me-lg-3 d-flex"}) do |form| %>
             <%= search_field_tag( :keywords, nil, class: "form-control", placeholder: "Search books by Title or ISBN13" ) %>
-            <%= form.select :genre_id, options_for_select(Genre.all.map{|c| [c.name, c.id]}), { prompt: "Select Genre" } %>
+            <%= form.select :genre_id, options_for_select(Genre.all.map{|c| [c.name, c.id]}), { prompt: "Select Genre" }, :style => "width: 8rem" %>
             <%= form.submit "Search", class: "button is-primary" %>
         <% end %>
+        <% else %>
+
+        <% end %>
+
         <%# <form class="col-8 col-lg-8 mb-3 mb-lg-0 me-lg-3 d-flex">
           <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
           <button type="button" class="btn"><i class="fa-solid fa-magnifying-glass"></i></button>
