--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
 
-  <body></body>
+  <body>
     <div>
       <%= render partial: 'layouts/navbar' %>
       <div class="banner">
@@ -25,14 +25,9 @@
       </div>
     </div>
     <section>
-    <%= yield %>
+      <%= yield %>
     </section>
-
-      <%if controller_name != 'books' %>
-        <p>No footer in the books page </p>
-      <% else %>
-        <%= render partial: 'layouts/footer' %>
-      <% end %>
+    <%= render partial: 'layouts/footer' %>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
 </html>
