--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -1,9 +1,13 @@
-<h1>New page</h1>
+<div class = "container">
+  <div class = "row">
+    <h1>New page</h1>
 
-<%= render "form", page: @page %>
+    <%= render "form", page: @page %>
 
-<br>
+    <br>
 
-<div>
-  <%= link_to "Back to pages", pages_path %>
+    <div>
+      <%= link_to "Back to pages", pages_path %>
+    </div>
+  </div>
 </div>
