--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,11 +1,15 @@
-<h1><%= @page.title %></h1>
-<p><%= raw(@page.content) %></p>
+<div class= "container" >
+  <div class= "row p-3">
+    <h1><%= @page.title %></h1>
+    <p><%= raw(@page.content) %></p>
 
-<ul>
-  <li><%= link_to "Edit", edit_page_path(@page) %></li>
-  <li><%= link_to "Destroy", @page, data: {
-                    turbo_method: :delete,
-                    turbo_confirm: "Are you sure?"
-                  } %></li>
-  <li><%= link_to "Back to pages", pages_path %></li>
-</ul>
+    <ul>
+      <li><%= link_to "Edit", edit_page_path(@page) %></li>
+      <li><%= link_to "Destroy", @page, data: {
+                        turbo_method: :delete,
+                        turbo_confirm: "Are you sure?"
+                      } %></li>
+      <li><%= link_to "Back to pages", pages_path %></li>
+    </ul>
+  </div>
+</div>
