--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -14,4 +14,4 @@
 <p>For intro project, I will address to all features in the first stage</p>
 <h3>ERD Diagram</h3>
 <br>
-<img src="../../book_store_intro_project.png">
+<img src="./book_store_intro_project.png">
